@@ -207,12 +207,12 @@ IDD_WHITENOTE_FORM DIALOGEX 0, 0, 656, 270
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_SUMMARY,84,4,564,38,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
-    LTEXT           "Narration",IDC_NARRATION_LABEL,6,48,78,24,WS_DISABLED
-    EDITTEXT        IDC_NARRATION_LEFT,84,48,564,18,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED
-    EDITTEXT        IDC_NARRATION_RIGHT,84,48,564,18,ES_AUTOHSCROLL | ES_READONLY | NOT WS_VISIBLE | WS_DISABLED,WS_EX_RIGHT | WS_EX_RTLREADING
+    EDITTEXT        IDC_SUMMARY,96,4,552,38,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
+    LTEXT           "Narration",IDC_NARRATION_LABEL,6,48,84,24,WS_DISABLED
+    EDITTEXT        IDC_NARRATION_LEFT,96,48,552,18,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED
+    EDITTEXT        IDC_NARRATION_RIGHT,96,48,552,18,ES_AUTOHSCROLL | ES_READONLY | NOT WS_VISIBLE | WS_DISABLED,WS_EX_RIGHT | WS_EX_RTLREADING
     LTEXT           "Image",IDC_LABEL_2,6,72,60,12,NOT WS_VISIBLE | WS_DISABLED
-    CONTROL         "Sheet Image",IDC_IMAGE,"Button",BS_OWNERDRAW | WS_DISABLED,84,72,564,191
+    CONTROL         "Sheet Image",IDC_IMAGE,"Button",BS_OWNERDRAW | WS_DISABLED,96,72,552,191
     LTEXT           "Description",IDC_STATIC,6,6,54,12
 END
 
@@ -288,6 +288,19 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,258,120,50,14
 END
 
+IDD_MOVEMENTSELECTION DIALOGEX 0, 0, 197, 200
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Movement Jump"
+FONT 8, "MS Shell Dlg", 0, 0, 0x0
+BEGIN
+    LTEXT           "Movement Number:",IDC_STATIC,6,6,66,12
+    EDITTEXT        IDC_MOVEMENT_NUMBER,72,6,118,12,ES_AUTOHSCROLL
+    LTEXT           "Movements List:",IDC_STATIC,6,24,66,12
+    LISTBOX         IDC_MOVEMENTS_LIST,72,24,118,144,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    DEFPUSHBUTTON   "OK",IDOK,84,174,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,138,174,50,14
+END
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -295,8 +308,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,5,4,0
- PRODUCTVERSION 2,5,4,0
+ FILEVERSION 2,5,5,0
+ PRODUCTVERSION 2,5,5,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -313,12 +326,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Rama"
             VALUE "FileDescription", "WhiteNote Music Narrator"
-            VALUE "FileVersion", "2.5.4.0"
+            VALUE "FileVersion", "2.5.5.0"
             VALUE "InternalName", "WhiteNote.exe"
             VALUE "LegalCopyright", "This is a free and open source software. Get the latest version from www.white-note.com"
             VALUE "OriginalFilename", "WhiteNote.exe"
             VALUE "ProductName", "WhiteNote"
-            VALUE "ProductVersion", "2.5.4.0"
+            VALUE "ProductVersion", "2.5.5.0"
         END
     END
     BLOCK "VarFileInfo"
@@ -399,6 +412,14 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 136
     END
+
+    IDD_MOVEMENTSELECTION, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 190
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 193
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -429,6 +450,16 @@ BEGIN
 END
 
 IDD_CUSTOMIZATION AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_MOVEMENTSELECTION AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_WHITENOTE_FORM AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
