@@ -81,6 +81,9 @@
     <ClInclude Include="Customization.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MovementSelection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WhiteNote.cpp">
@@ -135,6 +138,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Customization.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MovementSelection.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
