@@ -10,6 +10,7 @@ Persian letters are shown with letters by default.
 Opening bracket added to Chord, etc. Ending replaced back to ]
 Bug fixed for accidentals with unicode for extra _
 Bug fixed for space between ending bracket and ; in English.
+Movement selection window updated and measure number is kept for files with similar movements.
 
 Update Help: Persian letters.
 UPDATE INDEX files and HELP
